--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,15 @@
         <item name="colorPrimaryVariant">@android:color/white</item>
         <item name="colorSecondaryVariant">@color/colorDarkPrimary</item>
 
+        <!--> toolbar color -->
+        <item name="colorSurface">@color/appBackgroundColor</item>
+        <item name="colorOnPrimary">@color/colorPrimary</item>
+        <item name="colorOnSecondary">@android:color/white</item>
+        <item name="colorOnBackground">@color/appBackgroundColor</item>
+        <item name="colorOnError">@android:color/black</item>
+        <item name="colorOnSurface">@android:color/white</item>
+        <item name="scrimBackground">@color/mtrl_scrim_color</item>
+
         <item name="textAppearanceHeadline1">@style/TextAppearance.MaterialComponents.Headline1</item>
         <item name="textAppearanceHeadline2">@style/TextAppearance.MaterialComponents.Headline2</item>
         <item name="textAppearanceHeadline3">@style/TextAppearance.MaterialComponents.Headline3</item>
