--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -22,6 +22,7 @@
         android:id="@+id/tvIngredients"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:text="Ingredients"
@@ -40,6 +41,7 @@
         android:text="Time"
         android:textColor="@color/colorPrimaryText"
         android:textSize="20sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
@@ -47,7 +49,9 @@
         android:id="@+id/tvInstructions"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
         android:text="Instructions"
         android:textColor="@color/colorPrimaryText"
         android:textSize="20sp"
