--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -71,28 +71,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etIngredients" />
 
+    <ImageView
+        android:id="@+id/ivAddImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_add_photo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/etIngredients"
+        app:layout_constraintTop_toBottomOf="@+id/etTime" />
+
+
     <TextView
         android:id="@+id/tvCancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         android:text="CANCEL"
-        android:textSize="18sp"
         android:textColor="@color/colorPrimaryText"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/tvAdd"
-        app:layout_constraintTop_toBottomOf="@+id/etInstructions" />
+        app:layout_constraintTop_toBottomOf="@+id/ivAddImage" />
 
     <TextView
         android:id="@+id/tvAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:text="ADD"
-        android:textSize="18sp"
         android:textColor="@color/colorPrimaryText"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etInstructions" />
+        app:layout_constraintTop_toBottomOf="@+id/ivAddImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
