--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,9 @@
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
         <!-- Original AppCompat attributes. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorSecondary">@color/colorPrimary</item>
@@ -10,6 +13,10 @@
         <!-- New MaterialComponents attributes. -->
         <item name="colorPrimaryVariant">@android:color/white</item>
         <item name="colorSecondaryVariant">@color/colorDarkPrimary</item>
+
+        <!-- Material Dialog attributes. -->
+        <item name="material_dialog_positive_button_text_color">@android:color/white</item>
+        <item name="material_dialog_negative_button_text_color">@color/colorPrimary</item>
 
         <!--> toolbar color -->
         <item name="colorSurface">@color/appBackgroundColor</item>
