RecipeFragment to RecipeActivity, added transition to it and changed layout to CoordinationLayout

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,4 +46,8 @@
         <item name="android:textColor">@color/colorPrimaryText</item>
     </style>
 
+    <style name="ToolbarTitleTextAppearance" parent="TextAppearance.Design.CollapsingToolbar.Expanded">
+        <item name="android:textColor">@android:color/transparent</item>
+    </style>
+
 </resources>
