--- a/app/src/main/res/layout/recipe_row.xml
+++ b/app/src/main/res/layout/recipe_row.xml
@@ -13,6 +13,7 @@
         android:id="@+id/ivBackground"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:transitionName="photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
