--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,11 @@
         android:label="HomeFragment" >
         <action
             android:id="@+id/action_homeFragment_to_addRecipeFragment"
-            app:destination="@id/addRecipeFragment" />
+            app:destination="@id/addRecipeFragment"
+            app:enterAnim="@anim/slide_in_bottom_right"
+            app:exitAnim="@anim/slide_out_bottom_left"
+            app:popEnterAnim="@anim/slide_in_bottom_left"
+            app:popExitAnim="@anim/slide_in_bottom_right"/>
     </fragment>
 
     <fragment
@@ -18,6 +22,10 @@
         android:label="AddRecipeFragment" >
         <action
             android:id="@+id/action_addRecipeFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:enterAnim="@anim/slide_in_bottom_left"
+            app:exitAnim="@anim/slide_out_bottom_right"
+            app:popEnterAnim="@anim/slide_in_bottom_right"
+            app:popExitAnim="@anim/slide_out_bottom_left"/>
     </fragment>
 </navigation>
