--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="appBackgroundColor2">#FBFBFB</color>
     <color name="colorAccent">#52A39F</color>
     <color name="errorColor">#D50000</color>
+    <color name="onlineColor">#43A047</color>
     <color name="colorPrimaryText">@android:color/black</color>
     <color name="colorSecondaryText">#606060</color>
     <color name="colorBackgroundRow">#FFFFFF</color>
