Added strings and fixed some warnings

--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Add new recipe"
+        android:text="@string/add_new_recipe"
         android:textColor="@color/colorPrimaryText"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:hint="Name"
+        android:hint="@string/name"
         android:inputType="text"
         android:textColorHint="@color/colorSecondaryText"
         android:textColor="@color/colorPrimaryText"
@@ -38,7 +38,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="Time to cook in minutes"
+        android:hint="@string/time_to_cook_in_minutes"
         android:textColorHint="@color/colorSecondaryText"
         android:textColor="@color/colorPrimaryText"
         android:inputType="number"
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:hint="Ingredients"
+        android:hint="@string/ingredients"
         android:textColorHint="@color/colorSecondaryText"
         android:textColor="@color/colorPrimaryText"
         android:inputType="textMultiLine"
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:hint="Instructions"
+        android:hint="@string/instructions"
         android:inputType="textMultiLine"
         android:textColor="@color/colorPrimaryText"
         android:textColorHint="@color/colorSecondaryText"
@@ -88,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
-        android:text="CANCEL"
+        android:text="@string/cancel"
         android:textColor="@color/colorPrimaryText"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/tvAdd"
@@ -100,7 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:text="ADD"
+        android:text="@string/add"
         android:textColor="@color/colorPrimaryText"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
