Added AllRecipesViewModel, renamed some stuff and added AllRecipesFragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,7 +5,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="mr.cooker.mrcooker.ui.fragments.HomeFragment"
+        android:name="mr.cooker.mrcooker.ui.fragments.MyRecipesFragment"
         android:label="HomeFragment" >
         <action
             android:id="@+id/action_homeFragment_to_addRecipeFragment"
