--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/homeFragment"
-        android:title="Home"
+    <item android:id="@+id/allRecipesFragment"
+        android:title="All Recipes"
         android:icon="@drawable/ic_home"/>
+
+    <item android:id="@+id/myRecipesFragment"
+        android:title="My Recipes"
+        android:icon="@drawable/ic_my_recipes"/>
+
+    <item android:id="@+id/profileFragment"
+        android:title="Profile"
+        android:icon="@drawable/ic_profile"/>
 
 </menu>
