--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -5,7 +5,7 @@
 
     <fragment
         android:id="@+id/addRecipeFragment"
-        android:name="mr.cooker.mrcooker.ui.fragments.AddRecipeFragment"
+        android:name="mr.cooker.mrcooker.ui.fragments.main.AddRecipeFragment"
         android:label="AddRecipeFragment" >
         <action
             android:id="@+id/action_addRecipeFragment_to_allRecipesFragment"
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/allRecipesFragment"
-        android:name="mr.cooker.mrcooker.ui.fragments.AllRecipesFragment"
+        android:name="mr.cooker.mrcooker.ui.fragments.main.AllRecipesFragment"
         android:label="AllRecipesFragment" >
         <action
             android:id="@+id/action_allRecipesFragment_to_addRecipeFragment"
@@ -29,7 +29,7 @@
     </fragment>
     <fragment
         android:id="@+id/myRecipesFragment"
-        android:name="mr.cooker.mrcooker.ui.fragments.MyRecipesFragment"
+        android:name="mr.cooker.mrcooker.ui.fragments.main.MyRecipesFragment"
         android:label="MyRecipesFragment" >
         <action
             android:id="@+id/action_myRecipesFragment_to_addRecipeFragment"
@@ -41,6 +41,6 @@
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
-        android:name="mr.cooker.mrcooker.ui.fragments.ProfileFragment"
+        android:name="mr.cooker.mrcooker.ui.fragments.main.ProfileFragment"
         android:label="ProfileFragment" />
 </navigation>
