--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/allRecipesFragment"
-        android:title="All Recipes"
+        android:title="@string/all_recipes"
         android:icon="@drawable/ic_home"/>
 
     <item android:id="@+id/myRecipesFragment"
-        android:title="My Recipes"
+        android:title="@string/my_recipes"
         android:icon="@drawable/ic_my_recipes"/>
 
     <item android:id="@+id/profileFragment"
-        android:title="Profile"
+        android:title="@string/profile"
         android:icon="@drawable/ic_profile"/>
 
 </menu>
