--- a/app/src/main/res/layout-night/fragment_login.xml
+++ b/app/src/main/res/layout-night/fragment_login.xml
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:text="@string/login"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorSecondaryText"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
