--- a/app/src/main/res/layout-night/fragment_reset_password.xml
+++ b/app/src/main/res/layout-night/fragment_reset_password.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp">
+    android:padding="10dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/login"
+        android:text="@string/reset_password"
         android:textColor="@color/colorPrimaryText"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -20,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.agrawalsuneet.dotsloader.loaders.TrailingCircularDotsLoader
-        android:id="@+id/trailingLoaderLogin"
+        android:id="@+id/trailingLoaderResetPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
@@ -36,7 +35,7 @@
         android:visibility="gone"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/loginLayout"
+        android:id="@+id/resetPasswordLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -46,69 +45,55 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
-        <EditText
-            android:id="@+id/etLoginEmail"
+        <TextView
+            android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorPrimaryText"
-            android:hint="@string/enter_your_email"
-            android:inputType="textEmailAddress"
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
+            android:text="@string/click_on_the_button_to_reset_your_password_email_link_will_be_sent"
             android:textColor="@color/colorPrimaryText"
-            android:textColorHint="@color/colorSecondaryText"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/etLoginPassword"
+            android:id="@+id/etEmailResetPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:backgroundTint="@color/colorPrimaryText"
-            android:hint="@string/enter_your_password"
-            android:inputType="textPassword"
+            android:hint="@string/enter_your_email"
+            android:inputType="textEmailAddress"
             android:textColor="@color/colorPrimaryText"
             android:textColorHint="@color/colorSecondaryText"
-            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etLoginEmail" />
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnResetPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:text="@string/login"
-            android:textColor="@color/colorSecondaryText"
+            android:layout_marginTop="20dp"
+            android:text="@string/reset_password"
+            android:textColor="@android:color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/etEmailResetPass"/>
 
         <TextView
-            android:id="@+id/tvRegister"
+            android:id="@+id/tvBackToLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/don_t_have_an_account"
+            android:text="@string/back_to_login"
             android:textColor="@color/colorPrimaryText"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
-
-        <TextView
-            android:id="@+id/tvResetPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/forgot_password"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvRegister" />
+            app:layout_constraintTop_toBottomOf="@+id/btnResetPassword" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
