--- a/app/src/main/res/layout-night/fragment_login.xml
+++ b/app/src/main/res/layout-night/fragment_login.xml
@@ -38,6 +38,9 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
@@ -45,10 +48,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/loginLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="20dp">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/etLoginEmail"
