--- a/app/src/main/res/layout-night/fragment_register.xml
+++ b/app/src/main/res/layout-night/fragment_register.xml
@@ -40,6 +40,9 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
@@ -47,10 +50,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/registerLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="20dp">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/etUsername"
